@@ -21,13 +21,18 @@ load_lib "poke.exp"
 #
 # A TAP consumer that translates TAP to DejaGNU.
 
-proc tap_execute {pkfile} {
+proc tap_execute {pkfile_path} {
     global POKE
     set timeoutmsg "Timed out: Never got started, "
     set timeout 100
     set file all
     set timetol 0
     set executable $POKE
+    # Keep only the last two elements of the path (directory name and
+    # file name).
+    set pkfile_name [file tail "$pkfile_path"]
+    set pkfile_parent_dir [file tail [file dirname "$pkfile_path"]]
+    set pkfile [file join "$pkfile_parent_dir" "$pkfile_name"]
 
     verbose "The executable is $executable" 2
     if {![file exists ${executable}]} {
@@ -35,14 +40,14 @@ proc tap_execute {pkfile} {
         return "Poke interpreter is missing"
     }
     verbose "The pkfile is $pkfile" 2
-    if {![file exists ${pkfile}]} {
+    if {![file exists ${pkfile_path}]} {
         perror "The poke file \"$pkfile\" is missing" 0
         return "No source file found"
     }
 
     # spawn the executable and look for the TAP output messages from the
     # test case.
-    spawn -noecho "${executable}" --no-hserver --color=no -q -L ${pkfile}
+    spawn -noecho "${executable}" --no-hserver --color=no -q -L ${pkfile_path}
     set txt "\[^\r\n\]*"
     set num "\[0-9\]\[0-9\]*"
     expect {
